--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="/Resimler/napoleon.jpg" class="d-block w-100" alt="...">
+              <img src="./Resimler/napoleon.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>NAPOLEON</h5>
                 <p>"Napoleon" filmi, Fransız İmparatoru'nun hayatını ve askeri başarılarını konu ediniyor. Abel Gance'ın
@@ -67,7 +67,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="/Resimler/thekiller.jpg" class="d-block w-100" alt="...">
+              <img src="./Resimler/thekiller.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>THE KILLER</h5>
                 <p>"The Killer," bir suikastçının son görevinde yaşadığı aksilikler ve ardından bir polisle işbirliği
@@ -75,7 +75,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="/Resimler/themarvels.jpg" class="d-block w-100" alt="...">
+              <img src="./Resimler/themarvels.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>THE MARVELS</h5>
                 <p>"The Marvels" filmi, Carol Danvers, Kamala Khan ve Monica Rambeau'nun güçlerini birleştirerek evreni
@@ -116,7 +116,7 @@
     <div class="row">
       <div class="col-md-4">
         <div class="card">
-          <img src="/Resimler/VizyonaGirecekler.jpg" class="card-img-top" alt="Film Resmi">
+          <img src="./Resimler/VizyonaGirecekler.jpg" class="card-img-top" alt="Film Resmi">
           <div class="card-body">
             <h5 class="card-title">Vizyona Girecekler</h5>
             <p class="card-text">Aralık ayında hangi filmler vizyona girecek?</p>
@@ -127,7 +127,7 @@
 
       <div class="col-md-4">
         <div class="card">
-          <img src="/Resimler/yonetmenfilms.jpg" class="card-img-top" alt="Hint Film Resmi">
+          <img src="./Resimler/yonetmenfilms.jpg" class="card-img-top" alt="Hint Film Resmi">
           <div class="card-body">
             <h5 class="card-title">Yönetmen Filmleri</h5>
             <p class="card-text">En çok hangi yönetmenlerin filmlerini izledin?</p>
@@ -138,7 +138,7 @@
 
       <div class="col-md-4">
         <div class="card">
-          <img src="/Resimler/hasilatfilms.jpg" class="card-img-top" alt="Hint Film Resmi">
+          <img src="./Resimler/hasilatfilms.jpg" class="card-img-top" alt="Hint Film Resmi">
           <div class="card-body">
             <h5 class="card-title">Hasılat Rekorları</h5>
             <p class="card-text">En çok hasılat yapan filmler hangileri?</p>
