--- a/aralıkvizyon.html
+++ b/aralıkvizyon.html
@@ -57,7 +57,7 @@
     <div class="row">
       <div class="col-md-12 col-lg-12 col-sm-12">
         <div class="film-karti">
-          <img src="/Resimler/Thanksgiving.jpg" class="film-afisi" alt="Film Afişi">
+          <img src="./Resimler/Thanksgiving.jpg" class="film-afisi" alt="Film Afişi">
           <div class="film-bilgileri">
             <p class="film-adı-küçük">Thanksgiving</p>
             <p class="film-yonetmen">Yönetmen: Eli Roth</p>
@@ -78,7 +78,7 @@
     <div class="row">
       <div class="col-md-12 col-lg-12 col-sm-12">
         <div class="film-karti">
-          <img src="/Resimler/EvilDoesNotExist.jpg" class="film-afisi" alt="Film Afişi">
+          <img src="./Resimler/EvilDoesNotExist.jpg" class="film-afisi" alt="Film Afişi">
           <div class="film-bilgileri">
             <p class="film-adı-küçük">Evil Does Not Exist</p>
             <p class="film-yonetmen">Yönetmen: Ryûsuke Hamaguchi</p>
@@ -98,7 +98,7 @@
     <div class="row">
       <div class="col-md-12 col-lg-12 col-sm-12">
         <div class="film-karti">
-          <img src="/Resimler/ÖlümlüDünya2.jpg" class="film-afisi" alt="Film Afişi">
+          <img src="./Resimler/ÖlümlüDünya2.jpg" class="film-afisi" alt="Film Afişi">
           <div class="film-bilgileri">
             <p class="film-adı-küçük">Ölümlü Dünya 2</p>
             <p class="film-yonetmen">Yönetmen: Ali Atay</p>
@@ -122,7 +122,7 @@
     <div class="row">
       <div class="col-md-12 col-lg-12 col-sm-12">
         <div class="film-karti">
-          <img src="/Resimler/PastLives.jpg" class="film-afisi" alt="Film Afişi">
+          <img src="./Resimler/PastLives.jpg" class="film-afisi" alt="Film Afişi">
           <div class="film-bilgileri">
             <p class="film-adı-küçük">Past Lives</p>
             <p class="film-yonetmen">Yönetmen: Celine Song</p>
@@ -141,7 +141,7 @@
     <div class="row">
       <div class="col-md-12 col-lg-12 col-sm-12">
         <div class="film-karti">
-          <img src="/Resimler/Haile2VarmıYokmu.jpg" class="film-afisi" alt="Film Afişi">
+          <img src="./Resimler/Haile2VarmıYokmu.jpg" class="film-afisi" alt="Film Afişi">
           <div class="film-bilgileri">
             <p class="film-adı-küçük">Haile 2: Var mı, Yok mu?!</p>
             <p class="film-yonetmen">Yönetmen: Alper Mestçi</p>
@@ -163,7 +163,7 @@
     <div class="row">
       <div class="col-md-12 col-lg-12 col-sm-12">
         <div class="film-karti">
-          <img src="/Resimler/TheWrathofBecky.jpg" class="film-afisi" alt="Film Afişi">
+          <img src="./Resimler/TheWrathofBecky.jpg" class="film-afisi" alt="Film Afişi">
           <div class="film-bilgileri">
             <p class="film-adı-küçük">The Wrath of Becky</p>
             <p class="film-yonetmen">Yönetmen: Matt Angel, Suzanne Coote</p>
@@ -184,7 +184,7 @@
     <div class="row">
       <div class="col-md-12 col-lg-12 col-sm-12">
         <div class="film-karti">
-          <img src="/Resimler/JeanneduBarry.jpg" class="film-afisi" alt="Film Afişi">
+          <img src="./Resimler/JeanneduBarry.jpg" class="film-afisi" alt="Film Afişi">
           <div class="film-bilgileri">
             <p class="film-adı-küçük">Jeanne du Barry</p>
             <p class="film-yonetmen">Yönetmen: Maiwenn</p>
@@ -203,7 +203,7 @@
     <div class="row">
       <div class="col-md-12 col-lg-12 col-sm-12">
         <div class="film-karti">
-          <img src="/Resimler/SilentNight.jpg" class="film-afisi" alt="Film Afişi">
+          <img src="./Resimler/SilentNight.jpg" class="film-afisi" alt="Film Afişi">
           <div class="film-bilgileri">
             <p class="film-adı-küçük">Silent Night</p>
             <p class="film-yonetmen">Yönetmen: John Woo</p>
@@ -225,7 +225,7 @@
     <div class="row">
       <div class="col-md-12 col-lg-12 col-sm-12">
         <div class="film-karti">
-          <img src="/Resimler/NefesYerEksiİki.jpg" class="film-afisi" alt="Film Afişi">
+          <img src="./Resimler/NefesYerEksiİki.jpg" class="film-afisi" alt="Film Afişi">
           <div class="film-bilgileri">
             <p class="film-adı-küçük">Nefes - Yer Eksi İki</p>
             <p class="film-yonetmen">Yönetmen: Ozan Uzunoğlu</p>
@@ -245,7 +245,7 @@
     <div class="row">
       <div class="col-md-12 col-lg-12 col-sm-12">
         <div class="film-karti">
-          <img src="/Resimler/Hayat.jpg" class="film-afisi" alt="Film Afişi">
+          <img src="./Resimler/Hayat.jpg" class="film-afisi" alt="Film Afişi">
           <div class="film-bilgileri">
             <p class="film-adı-küçük">Hayat</p>
             <p class="film-yonetmen">Yönetmen: Zeki Demirkubuz</p>
@@ -264,7 +264,7 @@
     <div class="row">
       <div class="col-md-12 col-lg-12 col-sm-12">
         <div class="film-karti">
-          <img src="/Resimler/Wonka.jpg" class="film-afisi" alt="Film Afişi">
+          <img src="./Resimler/Wonka.jpg" class="film-afisi" alt="Film Afişi">
           <div class="film-bilgileri">
             <p class="film-adı-küçük">Wonka</p>
             <p class="film-yonetmen">Yönetmen: Paul King</p>
@@ -288,7 +288,7 @@
     <div class="row">
       <div class="col-md-12 col-lg-12 col-sm-12">
         <div class="film-karti">
-          <img src="/Resimler/Ferrari.jpg" class="film-afisi" alt="Film Afişi">
+          <img src="./Resimler/Ferrari.jpg" class="film-afisi" alt="Film Afişi">
           <div class="film-bilgileri">
             <p class="film-adı-küçük">Ferrari</p>
             <p class="film-yonetmen">Yönetmen: Michael Mann</p>
@@ -307,7 +307,7 @@
     <div class="row">
       <div class="col-md-12 col-lg-12 col-sm-12">
         <div class="film-karti">
-          <img src="/Resimler/KadınlaraMahsus.jpg" class="film-afisi" alt="Film Afişi">
+          <img src="./Resimler/KadınlaraMahsus.jpg" class="film-afisi" alt="Film Afişi">
           <div class="film-bilgileri">
             <p class="film-adı-küçük">Kadınlara Mahsus</p>
             <p class="film-yonetmen">Yönetmen: Serdar Akar</p>
@@ -326,7 +326,7 @@
     <div class="row">
       <div class="col-md-12 col-lg-12 col-sm-12">
         <div class="film-karti">
-          <img src="/Resimler/AquamanandtheLostKingdom.jpg" class="film-afisi" alt="Film Afişi">
+          <img src="./Resimler/AquamanandtheLostKingdom.jpg" class="film-afisi" alt="Film Afişi">
           <div class="film-bilgileri">
             <p class="film-adı-küçük">Aquaman and the Lost Kingdom</p>
             <p class="film-yonetmen">Yönetmen: James Wan</p>
@@ -347,7 +347,7 @@
     <div class="row">
       <div class="col-md-12 col-lg-12 col-sm-12">
         <div class="film-karti">
-          <img src="/Resimler/HERD.jpg" class="film-afisi" alt="Film Afişi">
+          <img src="./Resimler/HERD.jpg" class="film-afisi" alt="Film Afişi">
           <div class="film-bilgileri">
             <p class="film-adı-küçük">HERD</p>
             <p class="film-yonetmen">Yönetmen: Steven Pierce</p>
@@ -366,7 +366,7 @@
     <div class="row">
       <div class="col-md-12 col-lg-12 col-sm-12">
         <div class="film-karti">
-          <img src="/Resimler/GünahŞeytanınOğlu.jpg" class="film-afisi" alt="Film Afişi">
+          <img src="./Resimler/GünahŞeytanınOğlu.jpg" class="film-afisi" alt="Film Afişi">
           <div class="film-bilgileri">
             <p class="film-adı-küçük">Günah Şeytanın Oğlu</p>
             <p class="film-yonetmen">Yönetmen: Ömer Korkmaz</p>
@@ -385,7 +385,7 @@
     <div class="row">
       <div class="col-md-12 col-lg-12 col-sm-12">
         <div class="film-karti">
-          <img src="/Resimler/SağSalim3ÖlüyadaDiri.jpg" class="film-afisi" alt="Film Afişi">
+          <img src="./Resimler/SağSalim3ÖlüyadaDiri.jpg" class="film-afisi" alt="Film Afişi">
           <div class="film-bilgileri">
             <p class="film-adı-küçük">Sağ Salim 3: Ölü ya da Diri</p>
             <p class="film-yonetmen">Yönetmen: Ersoy Güler</p>
@@ -408,7 +408,7 @@
     <div class="row">
       <div class="col-md-12 col-lg-12 col-sm-12">
         <div class="film-karti">
-          <img src="/Resimler/ItLivesInside.jpg" class="film-afisi" alt="Film Afişi">
+          <img src="./Resimler/ItLivesInside.jpg" class="film-afisi" alt="Film Afişi">
           <div class="film-bilgileri">
             <p class="film-adı-küçük">It Lives Inside</p>
             <p class="film-yonetmen">Yönetmen: Bishal Dutta</p>
@@ -427,7 +427,7 @@
     <div class="row">
       <div class="col-md-12 col-lg-12 col-sm-12">
         <div class="film-karti">
-          <img src="/Resimler/Dogman.jpg" class="film-afisi" alt="Film Afişi">
+          <img src="./Resimler/Dogman.jpg" class="film-afisi" alt="Film Afişi">
           <div class="film-bilgileri">
             <p class="film-adı-küçük">Dogman</p>
             <p class="film-yonetmen">Yönetmen: Luc Besson</p>
@@ -448,7 +448,7 @@
     <div class="row">
       <div class="col-md-12 col-lg-12 col-sm-12">
         <div class="film-karti">
-          <img src="/Resimler/MayDecember.jpg" class="film-afisi" alt="Film Afişi">
+          <img src="./Resimler/MayDecember.jpg" class="film-afisi" alt="Film Afişi">
           <div class="film-bilgileri">
             <p class="film-adı-küçük">May December</p>
             <p class="film-yonetmen">Yönetmen: Todd Haynes</p>
@@ -468,7 +468,7 @@
     <div class="row">
       <div class="col-md-12 col-lg-12 col-sm-12">
         <div class="film-karti">
-          <img src="/Resimler/AnyoneButYou.jpg" class="film-afisi" alt="Film Afişi">
+          <img src="./Resimler/AnyoneButYou.jpg" class="film-afisi" alt="Film Afişi">
           <div class="film-bilgileri">
             <p class="film-adı-küçük">Anyone But You</p>
             <p class="film-yonetmen">Yönetmen: Will Gluck</p>
@@ -488,7 +488,7 @@
     <div class="row">
       <div class="col-md-12 col-lg-12 col-sm-12">
         <div class="film-karti">
-          <img src="/Resimler/BedRest.jpg" class="film-afisi" alt="Film Afişi">
+          <img src="./Resimler/BedRest.jpg" class="film-afisi" alt="Film Afişi">
           <div class="film-bilgileri">
             <p class="film-adı-küçük">Bed Rest</p>
             <p class="film-yonetmen">Yönetmen: Lori Evans Taylor</p>
