--- a/hasilatfilms.html
+++ b/hasilatfilms.html
@@ -57,7 +57,7 @@
         <div class="row">
             <div class="col-md-12 col-lg-12 col-sm-12">
                 <div class="film-karti">
-                    <img src="/Resimler/Avatar.jpg" class="film-afisi" alt="Film Afişi">
+                    <img src="./Resimler/Avatar.jpg" class="film-afisi" alt="Film Afişi">
                     <div class="film-bilgileri">
                         <p class="film-adı-küçük">1. Avatar</p>
                         <p class="film-yonetmen">Yönetmen: James Cameron</p>
@@ -80,7 +80,7 @@
         <div class="row">
             <div class="col-md-12 col-lg-12 col-sm-12">
                 <div class="film-karti">
-                    <img src="/Resimler/AvengersEndgame.jpg" class="film-afisi" alt="Film Afişi">
+                    <img src="./Resimler/AvengersEndgame.jpg" class="film-afisi" alt="Film Afişi">
                     <div class="film-bilgileri">
                         <p class="film-adı-küçük">2. Avengers: Endgame</p>
                         <p class="film-yonetmen">Yönetmen: Anthony Russo, Joe Russo</p>
@@ -103,7 +103,7 @@
         <div class="row">
             <div class="col-md-12 col-lg-12 col-sm-12">
                 <div class="film-karti">
-                    <img src="/Resimler/AvatarTWOW.jpg" class="film-afisi" alt="Film Afişi">
+                    <img src="./Resimler/AvatarTWOW.jpg" class="film-afisi" alt="Film Afişi">
                     <div class="film-bilgileri">
                         <p class="film-adı-küçük">3. Avatar: The Way of Water</p>
                         <p class="film-yonetmen">Yönetmen: James Cameron</p>
@@ -124,7 +124,7 @@
         <div class="row">
             <div class="col-md-12 col-lg-12 col-sm-12">
                 <div class="film-karti">
-                    <img src="/Resimler/Titanic.jpg" class="film-afisi" alt="Film Afişi">
+                    <img src="./Resimler/Titanic.jpg" class="film-afisi" alt="Film Afişi">
                     <div class="film-bilgileri">
                         <p class="film-adı-küçük">4. Titanic</p>
                         <p class="film-yonetmen">Yönetmen: James Cameron</p>
@@ -147,7 +147,7 @@
         <div class="row">
             <div class="col-md-12 col-lg-12 col-sm-12">
                 <div class="film-karti">
-                    <img src="/Resimler/StarWarsTheForceAwakens.jpg" class="film-afisi" alt="Film Afişi">
+                    <img src="./Resimler/StarWarsTheForceAwakens.jpg" class="film-afisi" alt="Film Afişi">
                     <div class="film-bilgileri">
                         <p class="film-adı-küçük">5. Star Wars: The Force Awakens</p>
                         <p class="film-yonetmen">Yönetmen: J.J. Abrams</p>
@@ -168,7 +168,7 @@
         <div class="row">
             <div class="col-md-12 col-lg-12 col-sm-12">
                 <div class="film-karti">
-                    <img src="/Resimler/AvengersInfinityWar.jpg" class="film-afisi" alt="Film Afişi">
+                    <img src="./Resimler/AvengersInfinityWar.jpg" class="film-afisi" alt="Film Afişi">
                     <div class="film-bilgileri">
                         <p class="film-adı-küçük">6. Avengers: Infinity War</p>
                         <p class="film-yonetmen">Yönetmen: Anthony Russo, Joe Russo</p>
@@ -188,7 +188,7 @@
         <div class="row">
             <div class="col-md-12 col-lg-12 col-sm-12">
                 <div class="film-karti">
-                    <img src="/Resimler/JurassicWorld.jpg" class="film-afisi" alt="Film Afişi">
+                    <img src="./Resimler/JurassicWorld.jpg" class="film-afisi" alt="Film Afişi">
                     <div class="film-bilgileri">
                         <p class="film-adı-küçük">7. Jurassic World</p>
                         <p class="film-yonetmen">Yönetmen: Colin Trevorrow</p>
@@ -209,7 +209,7 @@
         <div class="row">
             <div class="col-md-12 col-lg-12 col-sm-12">
                 <div class="film-karti">
-                    <img src="/Resimler/TheLionKing.jpg" class="film-afisi" alt="Film Afişi">
+                    <img src="./Resimler/TheLionKing.jpg" class="film-afisi" alt="Film Afişi">
                     <div class="film-bilgileri">
                         <p class="film-adı-küçük">8. The Lion King</p>
                         <p class="film-yonetmen">Yönetmen: Jon Favreau</p>
@@ -229,7 +229,7 @@
         <div class="row">
             <div class="col-md-12 col-lg-12 col-sm-12">
                 <div class="film-karti">
-                    <img src="/Resimler/TheAvengers.jpg" class="film-afisi" alt="Film Afişi">
+                    <img src="./Resimler/TheAvengers.jpg" class="film-afisi" alt="Film Afişi">
                     <div class="film-bilgileri">
                         <p class="film-adı-küçük">9. The Avengers</p>
                         <p class="film-yonetmen">Yönetmen: Joss Whedon</p>
@@ -250,7 +250,7 @@
         <div class="row">
             <div class="col-md-12 col-lg-12 col-sm-12">
                 <div class="film-karti">
-                    <img src="/Resimler/Furious7.jpg" class="film-afisi" alt="Film Afişi">
+                    <img src="./Resimler/Furious7.jpg" class="film-afisi" alt="Film Afişi">
                     <div class="film-bilgileri">
                         <p class="film-adı-küçük">10. Fast & Furious 7</p>
                         <p class="film-yonetmen">Yönetmen: James Wan</p>
