--- a/mostpopularmovies.html
+++ b/mostpopularmovies.html
@@ -58,7 +58,7 @@
       <tr>
         <td class="film">
           <div class="film-info">
-            <img src="/Resimler/Napolyon.jpg" alt="Film 1 Küçük Resim">
+            <img src="./Resimler/Napolyon.jpg" alt="Film 1 Küçük Resim">
             <div class="film-bilgisi">
               <h2>Napoleon</h2>
               <p>2023 2s 38dk</p>
@@ -70,7 +70,7 @@
       <tr>
         <td class="film">
           <div class="film-info">
-            <img src="/Resimler/TheHungerGames.jpg" alt="Film 2 Küçük Resim">
+            <img src="./Resimler/TheHungerGames.jpg" alt="Film 2 Küçük Resim">
             <div class="film-bilgisi">
               <h2>The Hunger Games: The Ballad of Songbirds & Snakes</h2>
               <p>2023 2s 37dk</p>
@@ -82,7 +82,7 @@
       <tr>
         <td class="film">
           <div class="film-info">
-            <img src="/Resimler/TheKiller1.jpg" alt="Film 1 Küçük Resim">
+            <img src="./Resimler/TheKiller1.jpg" alt="Film 1 Küçük Resim">
             <div class="film-bilgisi">
               <h2>The Killer</h2>
               <p>2023 1s 58dk</p>
@@ -94,7 +94,7 @@
       <tr>
         <td class="film">
           <div class="film-info">
-            <img src="/Resimler/Thanksgiving.jpg" alt="Film 1 Küçük Resim">
+            <img src="./Resimler/Thanksgiving.jpg" alt="Film 1 Küçük Resim">
             <div class="film-bilgisi">
               <h2>Thanksgiving</h2>
               <p>1975 1s 46dk</p>
@@ -106,7 +106,7 @@
       <tr>
         <td class="film">
           <div class="film-info">
-            <img src="/Resimler/Oppenheimer.jpg" alt="Film 1 Küçük Resim">
+            <img src="./Resimler/Oppenheimer.jpg" alt="Film 1 Küçük Resim">
             <div class="film-bilgisi">
               <h2>Oppenheimer</h2>
               <p>2023 3s </p>
