--- a/mostpopulartv.html
+++ b/mostpopulartv.html
@@ -58,7 +58,7 @@
       <tr>
         <td class="film">
           <div class="film-info">
-            <img src="/Resimler/Fargo.jpg" alt="Film 1 Küçük Resim">
+            <img src="./Resimler/Fargo.jpg" alt="Film 1 Küçük Resim">
             <div class="film-bilgisi">
               <h2>Fargo</h2>
               <p>2014–2024 51 bölüm</p>
@@ -70,7 +70,7 @@
       <tr>
         <td class="film">
           <div class="film-info">
-            <img src="/Resimler/MonarchLegacyofMonsters.jpg" alt="Film 2 Küçük Resim">
+            <img src="./Resimler/MonarchLegacyofMonsters.jpg" alt="Film 2 Küçük Resim">
             <div class="film-bilgisi">
               <h2>Monarch: Legacy of Monsters</h2>
               <p>2023– 10 bölüm</p>
@@ -82,7 +82,7 @@
       <tr>
         <td class="film">
           <div class="film-info">
-            <img src="/Resimler/TheCrown.jpg" alt="Film 2 Küçük Resim">
+            <img src="./Resimler/TheCrown.jpg" alt="Film 2 Küçük Resim">
             <div class="film-bilgisi">
               <h2>The Crown</h2>
               <p>2016–2023 60 bölüm</p>
@@ -94,7 +94,7 @@
       <tr>
         <td class="film">
           <div class="film-info">
-            <img src="/Resimler/AlltheLightWeCannotSee.jpg" alt="Film 1 Küçük Resim">
+            <img src="./Resimler/AlltheLightWeCannotSee.jpg" alt="Film 1 Küçük Resim">
             <div class="film-bilgisi">
               <h2>All the Light We Cannot See</h2>
               <p>2023 4 bölüm</p>
@@ -106,7 +106,7 @@
       <tr>
         <td class="film">
           <div class="film-info">
-            <img src="/Resimler/AMurderattheEndoftheWorld.jpg" alt="Film 1 Küçük Resim">
+            <img src="./Resimler/AMurderattheEndoftheWorld.jpg" alt="Film 1 Küçük Resim">
             <div class="film-bilgisi">
               <h2>A Murder at the End of the World</h2>
               <p>2023 7 bölüm</p>
