--- a/movies.html
+++ b/movies.html
@@ -59,7 +59,7 @@
       <tr>
         <td class="film">
           <div class="film-info">
-            <img src="/Resimler/12angryman.jpg" alt="Film 1 Küçük Resim">
+            <img src="./Resimler/12angryman.jpg" alt="Film 1 Küçük Resim">
             <div class="film-bilgisi">
               <h2><a href="https://www.imdb.com/title/tt0050083/?ref_=nv_sr_srsg_0_tt_8_nm_0_q_12" target="_blank">12
                   Angry Men</a></h2>
@@ -72,7 +72,7 @@
       <tr>
         <td class="film">
           <div class="film-info">
-            <img src="/Resimler/Schindler'sList.jpg" alt="Film 2 Küçük Resim">
+            <img src="./Resimler/Schindler'sList.jpg" alt="Film 2 Küçük Resim">
             <div class="film-bilgisi">
               <h2><a href="https://www.imdb.com/title/tt0108052/?ref_=nv_sr_srsg_0_tt_5_nm_3_q_schind"
                   target="_blank">Schindler's List</a></h2>
@@ -85,7 +85,7 @@
       <tr>
         <td class="film">
           <div class="film-info">
-            <img src="/Resimler/iyikötüçirkin.jpg" alt="Film 1 Küçük Resim">
+            <img src="./Resimler/iyikötüçirkin.jpg" alt="Film 1 Küçük Resim">
             <div class="film-bilgisi">
               <h2><a href="https://www.imdb.com/title/tt0060196/?ref_=nv_sr_srsg_6_tt_7_nm_1_q_the%2520good%2520"
                   target="_blank">The Good, the Bad and the Ugly</a></h2>
@@ -98,7 +98,7 @@
       <tr>
         <td class="film">
           <div class="film-info">
-            <img src="/Resimler/TheSilenceoftheLambs.jpg" alt="Film 1 Küçük Resim">
+            <img src="./Resimler/TheSilenceoftheLambs.jpg" alt="Film 1 Küçük Resim">
             <div class="film-bilgisi">
               <h2><a href="https://www.imdb.com/title/tt0102926/?ref_=nv_sr_srsg_3_tt_8_nm_0_q_the%2520sil"
                   target="_blank">The Silence of the Lambs</a></h2>
@@ -111,7 +111,7 @@
       <tr>
         <td class="film">
           <div class="film-info">
-            <img src="/Resimler/TheShining.jpg" alt="Film 1 Küçük Resim">
+            <img src="./Resimler/TheShining.jpg" alt="Film 1 Küçük Resim">
             <div class="film-bilgisi">
               <h2><a href="https://www.imdb.com/title/tt0081505/?ref_=nv_sr_srsg_3_tt_8_nm_0_q_the%2520shi"
                   target="_blank">The Shining</a></h2>
