--- a/tvshows.html
+++ b/tvshows.html
@@ -59,7 +59,7 @@
       <tr>
         <td class="film">
           <div class="film-info">
-            <img src="/Resimler/BreakingBad.jpg" alt="Film 1 Küçük Resim">
+            <img src="./Resimler/BreakingBad.jpg" alt="Film 1 Küçük Resim">
             <div class="film-bilgisi">
               <h2> <a href="https://www.imdb.com/title/tt0903747/?ref_=nv_sr_srsg_3_tt_4_nm_4_q_brea"
                   target="_blank">Breaking Bad</a></h2>
@@ -72,7 +72,7 @@
       <tr>
         <td class="film">
           <div class="film-info">
-            <img src="/Resimler/Sherlock.jpg" alt="Film 2 Küçük Resim">
+            <img src="./Resimler/Sherlock.jpg" alt="Film 2 Küçük Resim">
             <div class="film-bilgisi">
               <h2><a href="https://www.imdb.com/title/tt1475582/?ref_=nv_sr_srsg_3_tt_1_nm_7_q_sher"
                   target="_blank">Sherlock</a></h2>
@@ -85,7 +85,7 @@
       <tr>
         <td class="film">
           <div class="film-info">
-            <img src="/Resimler/Friends.jpg" alt="Film 1 Küçük Resim">
+            <img src="./Resimler/Friends.jpg" alt="Film 1 Küçük Resim">
             <div class="film-bilgisi">
               <h2><a href="https://www.imdb.com/title/tt0108778/?ref_=nv_sr_srsg_0_tt_7_nm_1_q_fri"
                   target="_blank">Friends</a></h2>
@@ -98,7 +98,7 @@
       <tr>
         <td class="film">
           <div class="film-info">
-            <img src="/Resimler/Dark.jpg" alt="Film 1 Küçük Resim">
+            <img src="./Resimler/Dark.jpg" alt="Film 1 Küçük Resim">
             <div class="film-bilgisi">
               <h2><a href="https://www.imdb.com/title/tt5753856/?ref_=nv_sr_srsg_0_tt_8_nm_0_q_dark"
                   target="_blank">Dark</a></h2>
@@ -111,7 +111,7 @@
       <tr>
         <td class="film">
           <div class="film-info">
-            <img src="/Resimler/TheBoys.jpg" alt="Film 1 Küçük Resim">
+            <img src="./Resimler/TheBoys.jpg" alt="Film 1 Küçük Resim">
             <div class="film-bilgisi">
               <h2> <a href="https://www.imdb.com/title/tt1190634/?ref_=nv_sr_srsg_0_tt_6_nm_2_q_the%2520boys"
                   target="_blank">The Boys</a></h2>
